made all the edits

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,157 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="app.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet">
+    <title>Figma</title>
 </head>
 <body>
-    
+    <main>
+        <section class="header-wrap">
+            <header>
+                <div class="logo">UniDesign</div>
+                <nav>
+                  <ul class="menu">
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Contacts</a></li>
+                    <li><a href="#">Hire Me</a></li>
+                  </ul>
+                </nav>
+              </header>
+        </section>
+        <section class="homePage">
+              <div>
+                 <h3>Welcome To My PortFolio</h3>
+                 <h2>Hi, I am Steven UI/UX <span>Desginer</span></h2>
+                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Locus odio et plateo erat est sed turpis hoc equit</p>
+                    <div class="btn-block">
+                     <a href="#" class="btn btn-blue">Hire Me</a>
+                     <a href="#" class="btn">My Project</a>
+                    </div>
+              </div>
+              <div class="photoFace"></div>
+        </section>
+        <section class="about">
+            <div class="about-1">
+                <div>
+                <h2>About me</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has .</p>
+                  <div class="btn-block">
+                  <a href="#" class="btn btn-blue">Hire Me</a>
+                  </div>
+                </div>
+                <div>
+                  <img class="fotoAbout" src="../img/1 1.svg" alt="men"> 
+                </div>
+           </div>  
+        </section>
+        <section class="progects">
+              <h2>My progects</h2>
+              <p>Lorem Ipsum is simply dummy text of the printing</p>
+              <div class="progects-full"> 
+                <div class="progects-1">
+                <img class="img-progects" src="../img/Rectangle 30.png" alt="progect 1">
+                <img class="img-progects" src="../img/Rectangle 35.png" alt="progect 2">
+                <img class="img-progects" src="../img/Rectangle 38.png" alt="progect 3">
+              </div>
+              <div class="progects-2">
+                <img class="img-progects" src="../img/Rectangle 32.png" alt="progect 4">
+                <img class="img-progects" src="../img/Rectangle 36.png" alt="progect 5">
+                <img class="img-progects" src="../img/Rectangle 39.png" alt="progect 6">
+              </div>
+              <div class="progects-3">
+                <img class="img-progects" src="../img/Rectangle 34.png" alt="progect 7">
+                <img class="img-progects" src="../img/Rectangle 37.png" alt="progect 8">
+                <img class="img-progects" src="../img/Rectangle 40.png" alt="progect 9">
+              </div>
+            </div>
+        </section>
+        <section class="contact">
+              <h2>Contact Me</h2>
+              <p>Lorem Ipsum is simply dummy text of the printing</p>
+              <div class="contact-container">  
+                    <div> 
+                <form class="contact-1">
+                <div>
+                   <label for="email" class="sr-only">Email</label>
+                  <input id="email" type="text" name="email" placeholder="Email"  class="contact-btn text">
+                </div>
+                <br class="mb-2">
+                <div class="form-input">
+                    <label for="password" class="sr-only">Password</label>
+                    <input id="password" type="text" name="password" placeholder="Password" class="contact-btn text">
+                </div>
+                <br class="mb-2">
+                <div>
+                    <label for="messege" class="sr-only">Message</label>
+                    <textarea id="message" placeholder="Message..." class="contact-form text"></textarea>
+                </div>
+                <br class="mb-2"> 
+              <button class="knopka">Contact</button>
+               </form>
+              </div>
+                   <div>
+                     <img src="../img/Saly-13.svg" alt="people">
+                   </div>
+                </div>
+        </section>
+        <section class="question">
+            <div class="question-container">
+            <div>
+                <div class="question-logo">UniDesign</div>
+            <div class="one-btn">
+              <div>
+                <div class="pink">
+                    <form> 
+                    <label for="messege" class="sr-only">Email</label>
+                    <input class="question-form" id="message" placeholder="Email" class="text"></input>
+                    </form>
+                    <button class="question-btn">Subscribe</button></div>
+                </div>
+             </div>
+            </div>
+              <div class="question-footer">
+                <div>
+                    <h4>Platform</h4>
+                    <ul>
+                        <li>Home</li>
+                        <li>Overview</li>
+                        <li>Pricing</li>
+                        <li>About</li>
+                    </ul>
+                </div>
+                <div>
+                    <h4>Help</h4>
+                    <ul>
+                        <li>How It Works?</li>
+                        <li>Pay?</li>
+                        <li>Question?</li>
+                        <li>Contact?</li>
+                    </ul>
+                </div>
+                <div>
+                    <h4>Contact</h4>
+                    <ul>
+                        <li>(+000) 1234-6789</li>
+                        <li class="adress">116 Archlor Road
+                            Broadlaband,
+                            NewYork (NYC)
+                            1205</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+              <div class="line"></div>
+              <div class="footer">
+                <p>CopyRighted 2020-2023   All Rights Reserved.</p>
+              </div>
+        </section>
+    </main>
 </body>
 </html>
