new linter edits

--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
                     <li><a href="#">Hire Me</a></li>
                   </ul>
                 </nav>
-              </header>
+            </header>
         </section>
-        <section class="homePage">
+        <section class="home-page">
               <div>
                  <h3>Welcome To My PortFolio</h3>
                  <h2>Hi, I am Steven UI/UX <span>Desginer</span></h2>
@@ -37,88 +37,88 @@
                      <a href="#" class="btn">My Project</a>
                     </div>
               </div>
-              <div class="photoFace"></div>
+              <div class="home-page-img"></div>
         </section>
         <section class="about">
             <div class="about-1">
                 <div>
-                <h2>About me</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has .</p>
-                  <div class="btn-block">
-                  <a href="#" class="btn btn-blue">Hire Me</a>
-                  </div>
+                  <h2>About me</h2>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has .</p>
+                    <div class="btn-block">
+                      <a href="#" class="btn btn-blue">Hire Me</a>
+                    </div>
                 </div>
                 <div>
-                  <img class="fotoAbout" src="../img/1 1.svg" alt="men"> 
+                  <img class="about-img" src="../img/11.svg" alt="men"> 
                 </div>
            </div>  
         </section>
         <section class="progects">
               <h2>My progects</h2>
               <p>Lorem Ipsum is simply dummy text of the printing</p>
-              <div class="progects-full"> 
+              <div> 
                 <div class="progects-1">
-                <img class="img-progects" src="../img/Rectangle 30.png" alt="progect 1">
-                <img class="img-progects" src="../img/Rectangle 35.png" alt="progect 2">
-                <img class="img-progects" src="../img/Rectangle 38.png" alt="progect 3">
-              </div>
-              <div class="progects-2">
-                <img class="img-progects" src="../img/Rectangle 32.png" alt="progect 4">
-                <img class="img-progects" src="../img/Rectangle 36.png" alt="progect 5">
-                <img class="img-progects" src="../img/Rectangle 39.png" alt="progect 6">
-              </div>
-              <div class="progects-3">
-                <img class="img-progects" src="../img/Rectangle 34.png" alt="progect 7">
-                <img class="img-progects" src="../img/Rectangle 37.png" alt="progect 8">
-                <img class="img-progects" src="../img/Rectangle 40.png" alt="progect 9">
-              </div>
+                  <img class="img-progects" src="../img/Rectangle 30.png" alt="progect 1">
+                  <img class="img-progects" src="../img/Rectangle 35.png" alt="progect 2">
+                  <img class="img-progects" src="../img/Rectangle 38.png" alt="progect 3">
+                </div>
+                <div class="progects-1">
+                  <img class="img-progects" src="../img/Rectangle 32.png" alt="progect 4">
+                  <img class="img-progects" src="../img/Rectangle 36.png" alt="progect 5">
+                  <img class="img-progects" src="../img/Rectangle 39.png" alt="progect 6">
+                </div>
+                <div class="progects-1">
+                  <img class="img-progects" src="../img/Rectangle 34.png" alt="progect 7">
+                  <img class="img-progects" src="../img/Rectangle 37.png" alt="progect 8">
+                  <img class="img-progects" src="../img/Rectangle 40.png" alt="progect 9">
+                </div>
             </div>
         </section>
         <section class="contact">
               <h2>Contact Me</h2>
               <p>Lorem Ipsum is simply dummy text of the printing</p>
               <div class="contact-container">  
-                    <div> 
-                <form class="contact-1">
-                <div>
-                   <label for="email" class="sr-only">Email</label>
-                  <input id="email" type="text" name="email" placeholder="Email"  class="contact-btn text">
-                </div>
-                <br class="mb-2">
-                <div class="form-input">
-                    <label for="password" class="sr-only">Password</label>
-                    <input id="password" type="text" name="password" placeholder="Password" class="contact-btn text">
-                </div>
-                <br class="mb-2">
-                <div>
-                    <label for="messege" class="sr-only">Message</label>
-                    <textarea id="message" placeholder="Message..." class="contact-form text"></textarea>
-                </div>
-                <br class="mb-2"> 
-              <button class="knopka">Contact</button>
-               </form>
-              </div>
+                 <div> 
+                     <form class="contact-1">
+                        <div>
+                          <label for="email" class="sr-only">Email</label>
+                          <input id="email" type="text" name="email" placeholder="Email"  class="contact-btn text">
+                        </div>
+                        <br>
+                        <div class="form-input">
+                          <label for="password" class="sr-only">Password</label>
+                         <input id="password" type="text" name="password" placeholder="Password" class="contact-btn text">
+                       </div>
+                       <br>
+                       <div>
+                        <label for="messege" class="sr-only">Message</label>
+                        <textarea id="message" placeholder="Message..." class="contact-form text"></textarea>
+                       </div>
+                       <br> 
+                       <button class="contact-button">Contact</button>
+                     </form>
+                   </div>
                    <div>
                      <img src="../img/Saly-13.svg" alt="people">
                    </div>
-                </div>
+               </div>
         </section>
         <section class="question">
             <div class="question-container">
             <div>
                 <div class="question-logo">UniDesign</div>
-            <div class="one-btn">
-              <div>
-                <div class="pink">
-                    <form> 
-                    <label for="messege" class="sr-only">Email</label>
-                    <input class="question-form" id="message" placeholder="Email" class="text"></input>
-                    </form>
-                    <button class="question-btn">Subscribe</button></div>
-                </div>
-             </div>
-            </div>
-              <div class="question-footer">
+                <div class="one-btn">
+                  <div>
+                    <div class="pink">
+                      <form> 
+                        <label for="messege" class="sr-only">Email</label>
+                        <input class="question-form text" placeholder="Email"></input>
+                     </form>
+                     <button class="question-btn">Subscribe</button></div>
+                   </div>
+                 </div>
+               </div>
+               <div class="question-table">
                 <div>
                     <h4>Platform</h4>
                     <ul>
